; ModuleID = '/home/carl/AnghaBench/linux/lib/crypto/extr_sha256.c_BLEND_OP.c'
source_filename = "/home/carl/AnghaBench/linux/lib/crypto/extr_sha256.c_BLEND_OP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64*)* @BLEND_OP to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @BLEND_OP(i32 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  store i32 %0, i32* %3, align 4
  store i64* %1, i64** %4, align 8
  %5 = load i64*, i64** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = sub nsw i32 %6, 2
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i64, i64* %5, i64 %8
  %10 = load i64, i64* %9, align 8
  %11 = call i64 @s1(i64 %10)
  %12 = load i64*, i64** %4, align 8
  %13 = load i32, i32* %3, align 4
  %14 = sub nsw i32 %13, 7
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i64, i64* %12, i64 %15
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %11, %17
  %19 = load i64*, i64** %4, align 8
  %20 = load i32, i32* %3, align 4
  %21 = sub nsw i32 %20, 15
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i64, i64* %19, i64 %22
  %24 = load i64, i64* %23, align 8
  %25 = call i64 @s0(i64 %24)
  %26 = add nsw i64 %18, %25
  %27 = load i64*, i64** %4, align 8
  %28 = load i32, i32* %3, align 4
  %29 = sub nsw i32 %28, 16
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i64, i64* %27, i64 %30
  %32 = load i64, i64* %31, align 8
  %33 = add nsw i64 %26, %32
  %34 = load i64*, i64** %4, align 8
  %35 = load i32, i32* %3, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i64, i64* %34, i64 %36
  store i64 %33, i64* %37, align 8
  ret void
}

declare dso_local i64 @s1(i64) #1

declare dso_local i64 @s0(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
